# PictureVoter

./: README.md  mydb.py  pyproject.toml  replit_zip_error_log.txt
.cache/replit/: __replit_disk_meta.json
.upm/: store.json
PictureVoterApp/: apps.py  forms.py  models.py  urls.py  views.py
PictureVoterApp/migrations/: 0001_initial.py  0002_drawing.py  0003_drawing_drawing_name.py  0004_drawing_rating.py  0005_drawing_username.py
PictureVoterApp/templates/: base.html  draw_and_submit.html  home.html  imagerate.html  navbar.html  register.html
django_project/: settings.py  urls.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
